backend_stats.log
  File "/home/ary/Documentos/Aura_Ollama/system_stats_api.py", line 127
    return float(val)
    ^^^^^^
IndentationError: expected an indented block after 'try' statement on line 126
